# openvela-apps

./: .gitignore  Application.mk  CMakeLists.txt  Make.defs  Makefile  config.nims
.gitee/: PULL_REQUEST_TEMPLATE.md
.gitee/ISSUE_TEMPLATE/: 001_bug_report.yml  002_feature_request.yml  003_help.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 001_bug_report.yml  002_feature_request.yml  003_help.yml
.github/workflows/: build.yml  check.yml  checkpatch.yml  ci.yml  lint.yml
becnhmarks/testtlb/: CMakeLists.txt
benchmarks/cachespeed/: cachespeed_main.c
benchmarks/coremark/: CMakeLists.txt  Kconfig  Makefile
benchmarks/coremark-pro/: CMakeLists.txt  Makefile
benchmarks/dhrystone/: .gitignore  CMakeLists.txt  Makefile
benchmarks/osperf/: osperf.c
benchmarks/ramspeed/: ramspeed_main.c
benchmarks/rt-tests/: CMakeLists.txt  Kconfig  Makefile
benchmarks/rttests/: .gitignore  CMakeLists.txt  Make.defs  Makefile
benchmarks/tacle-bench/: CMakeLists.txt  Makefile  generate_taclebench_c.sh
benchmarks/taclebench/: .gitignore
benchmarks/test-tlb/: CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/testtlb/: .gitignore
benchmarks/tinymembench/: CMakeLists.txt  Makefile
boot/mcuboot/: Kconfig  Makefile
builtin/: builtin_list.c  exec_builtin.c
canutils/candump/: CMakeLists.txt  candump.c
canutils/cansend/: CMakeLists.txt
canutils/lely-canopen/: 0001-NuttX-port.patch  CMakeLists.txt
canutils/libcanardv0/: CMakeLists.txt
canutils/libcanardv1/: CMakeLists.txt
canutils/libobd2/: obd2.c  obd_decodepid.c  obd_sendrequest.c  obd_waitresponse.c
cmake/: nuttx_add_aidl.cmake  nuttx_add_jidl.cmake  nuttx_add_makefile.cmake  nuttx_add_wamrmod.cmake
crypto/libsodium/: 0001-fix-multiple-definition-bug-in-libsodium-test.patch  0002-fix-cannot-find-file-sodium-version.h.patch
crypto/libtomcrypt/: CMakeLists.txt  Makefile
crypto/mbedtls/: CMakeLists.txt  Kconfig  Make.defs  Makefile
crypto/tinycrypt/: Kconfig  Makefile
examples/: README.md
examples/abntcodi/: abntcodi_main.c
examples/alarm/: alarm_main.c
examples/apa102/: apa102_main.c
examples/apue/: .gitignore
examples/atomic/: Kconfig  Make.defs  Makefile  atomic_main.c
examples/bastest/: bastest_main.c
examples/battery/: batt_main.c
examples/bmi160/: Makefile
examples/can/: can_main.c
examples/chrono/: chrono_main.c
examples/cpuhog/: cpuhog_main.c
examples/elf/: elf_main.c
examples/etl/: etl_main.cxx
examples/foc/: Kconfig  foc_cfg.h  foc_main.c  foc_motor_b16.c  foc_motor_f32.c  foc_parseargs.c  foc_thr.c
examples/ftpc/: ftpc_main.c
examples/gps/: gps_main.c
examples/hello/: Makefile
examples/hello_d/: Makefile
examples/hidkbd/: hidkbd_main.c
examples/libtest/: libtest.c
examples/lvgldemo/: Kconfig  Makefile  lvgldemo.c
examples/lvglterm/: lvglterm.c
examples/modbus/: modbus_main.c
examples/module/: Make.defs  module_main.c
examples/netlink_route/: netlink_route_main.c
examples/netpkt/: netpkt_ethercat.c
examples/nettest/: nettest_server.c
examples/nxflat/: nxflat_main.c
examples/nxscope/: Kconfig  nxscope_main.c
examples/pipe/: pipe_main.c  (+2 more)
graphics/lvgl/: CMakeLists.txt  Kconfig  Make.defs  Makefile  lv_conf.h  lv_tick_interface.c  lv_tick_interface.h
graphics/lvgl/lv_demos/: Kconfig  Make.defs  Makefile  lvgl_demos.c
graphics/lvgl/lv_porting/: lv_acts_dma2d_interface.c  lv_acts_dma2d_interface.h  lv_dcache_interface.c  lv_dcache_interface.h  lv_fbdev_interface.c  lv_gpu_interface.h  lv_img_cache_lru.c  lv_img_cache_lru.h  lv_keypad_interface.c  lv_lcddev_interface.c  lv_mouse_interface.c  lv_mouse_interface.h  lv_porting.c  lv_porting.h  lv_touchpad_interface.c  lv_uv_interface.c
graphics/lvgl/lv_porting/decoder/jpeg_turbo/: lv_jpeg_turbo.c  lv_jpeg_turbo.h
graphics/lvgl/lv_porting/decoder/lodepng/: lodepng.c  lv_lodepng.c  lv_lodepng.h
graphics/lvgl/lv_porting/decoder/vglite/: lv_gpu_decoder.c  lv_gpu_decoder.h
graphics/lvgl/lv_porting/gpu/: lv_gpu_draw_utils.c  lv_gpu_draw_utils.h  lv_gpu_interface.c
graphics/lvgl/lv_porting/gpu/mve/: lv_gpu_draw_blend.c  lv_gpu_draw_blend.h
graphics/lvgl/lv_porting/gpu/vglite/: lv_gpu_draw_arc.c  lv_gpu_draw_img.c  lv_gpu_draw_layer.c  lv_gpu_draw_letter.c  lv_gpu_draw_letter.h  lv_gpu_draw_line.c  lv_gpu_draw_polygon.c  lv_gpu_draw_rect.c  vg_lite_utils.c  vg_lite_utils.h
graphics/lvgl/lv_porting/gpu_manager/: Kconfig  lv_gpu_buf.c  lv_gpu_buf.h  lv_gpu_conv.c  lv_gpu_conv.h  lv_gpu_manager.c  lv_gpu_manager.h  lv_gpu_types.h  lv_gpu_utils.c  lv_gpu_utils.h
graphics/lvgl/lv_porting/gpu_manager/mve/: mve_conv_imp.c  mve_conv_imp.h  mve_draw.c  mve_draw.h  mve_draw_blend.c  mve_internal.h
graphics/lvgl/lv_porting/gpu_manager/sw/: sw_conv_imp.c  sw_conv_imp.h  sw_draw.c  sw_draw.h
graphics/lvgl/lv_porting/gpu_manager/vg_lite/: Kconfig  vg_lite_decoder.c  vg_lite_decoder.h  vg_lite_decoder_etc2.c  vg_lite_decoder_evo.c  vg_lite_decoder_raw.c  vg_lite_draw.c  vg_lite_draw.h  vg_lite_draw_arc.c  vg_lite_draw_img_decoded.c  vg_lite_draw_layer.c  vg_lite_draw_letter.c  vg_lite_draw_line.c  vg_lite_draw_polygon.c  vg_lite_draw_rect.c  vg_lite_internal.h  vg_lite_utils.c  vg_lite_utils.h  vg_lite_utils_path.c  vg_lite_utils_path.h  vg_lite_wait_for_finish.c
graphics/lvgl/port/: lv_port_fbdev.c  lv_port_touchpad.c
graphics/lvgl/tools/: config_checker.py  config_refs.yml
interpreters/: CMakeLists.txt
interpreters/wamr/: CMakeLists.txt  Kconfig  Make.defs  Makefile  Toolchain.defs  libc_nuttx.c  wamr_custom_init.c  wamr_custom_init.h
interpreters/wamr/include/: wamr_custom_init.h
nshlib/: CMakeLists.txt  Kconfig  Makefile  README.md  nsh.h  nsh_builtin.c  nsh_command.c  nsh_ddcmd.c  nsh_envcmds.c  nsh_fileapps.c  nsh_fscmds.c  nsh_fsutils.c  nsh_init.c  nsh_mmcmds.c  nsh_netcmds.c  nsh_parse.c  nsh_proccmds.c  nsh_routecmds.c  nsh_script.c  nsh_session.c  nsh_spawn.c  nsh_syscmds.c  nsh_telnetd.c  nsh_timcmds.c  nsh_vars.c  nsh_wait.c
testing/: .gitignore
testing/unity/: CMakeLists.txt  Makefile
tools/: CMakeLists.txt  Wasm.mk  mkwamrglue.py
(+383 files in other folders)
